<resources>
    <string name="app_name">Habitree</string>
    <string name="title_home">Home</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="title_user">User</string>
    <string name="todays_habits">Today\'s Habits:</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="channel_name">Habitree</string>
    <string name="create_geofence_text">Confirm</string>
    <string name="cancel_geofence_text">Cancel</string>
    <string name="delete_geofence_text">Delete</string>
    <string name="share_tree">"Hey! I'm using Habitree to track my habits, check out my tree - "</string>
    <string name="share_leaderboard">"Hey! Join me using Habitree to track your habits - see if you can beat me! Follow my ID - "</string>
    <string name="channel_description">Habitree notifications</string>
    <string name="add_widget">Add widget</string>
    <string name="tree_widget_description">Display your current week\'s tree.</string>
    <string name="leaderboard_title">Leaderboard</string>
    <string name="upload_score_button_string">Upload score</string>
    <string name="share_id_button_string">Share ID</string>
    <string name="follow_user_button_string">Follow User</string>
</resources>