<?xml version="1.0" encoding="utf-8"?>

<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >


<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.editing.MapsFragment"
    />


    <Button
        android:id="@+id/cancel_geofence_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="?attr/actionBarSize"
        android:text="@string/cancel_geofence_text" />

    <Button
        android:id="@+id/erase_geofence_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_geofence_text"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="?attr/actionBarSize"
        android:layout_marginEnd="16dp"
        />
    <Button
        android:id="@+id/confirm_geofence_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_geofence_text"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="?attr/actionBarSize"
        android:layout_marginEnd="16dp"
        />
</FrameLayout>